--- a/how-to/use-notifications-service/java-with-jwt/pom.xml
+++ b/how-to/use-notifications-service/java-with-jwt/pom.xml
@@ -27,7 +27,7 @@
         <dependency>
             <groupId>co.openfin</groupId>
             <artifactId>java-cloud-notification-api</artifactId>
-            <version>10.0.0-beta.5a</version>
+            <version>10.0.0</version>
         </dependency>
         <dependency>
             <groupId>io.github.cdimascio</groupId>
